--- a/livres.html
+++ b/livres.html
@@ -69,20 +69,20 @@
       </figcaption>
     </figure>
 
-    <!--Livre 4
+    <!--Livre 4-->
     <figure>
-      <a href="https://www.amazon.fr/MARGE-DERREUR-REY-NICOLAS/dp/B08VCJ1LZ7/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1626616403&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/31MWx5CzjwS.jpg"
-          alt="La marge d'ereur" class="books" /></a>
+      <a href="https://www.amazon.fr/Comme-une-valse-Dorothy-PARKER/dp/2264017104/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=MO3CWG3CXEVZ&keywords=dorothy+parker+comme+une+valse&qid=1656614078&sprefix=dorothy+parker+comme+une+valse%2Caps%2C53&sr=8-1" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/61tP1Dq6TnL.jpg" alt="Comme une valse" class="books" /></a>
       <figcaption>
-        Nicolas Rey
+        Dorothy Parker
       </figcaption>
       <figcaption>
-        La Marge D'erreur
+        Comme une valse
       </figcaption>
       <figcaption>
-        18,00€
+        7,10€
       </figcaption>
-    </figure>-->
+    </figure>
   </div>
 
   <div class="booksLine">
@@ -131,20 +131,20 @@
       </figcaption>
     </figure>
 
-    <!--Livre 8
+    <!--Livre 8-->
     <figure>
-      <a href="https://www.amazon.fr/Lart-guerre-Traduit-comment%C3%A9-chinois/dp/2818504961?ref_=Oct_RAsinC_Ajax_301061_2&pf_rd_p=e5b0b4bf-eca8-52d1-8616-3e2c263b1a1e&pf_rd_s=merchandised-search-8&pf_rd_t=101&pf_rd_i=301061&pf_rd_m=A1X6FK5RDHNB96&pf_rd_r=79P8R1T9R8DG5CW5FW9X&pf_rd_r=79P8R1T9R8DG5CW5FW9X&pf_rd_p=e5b0b4bf-eca8-52d1-8616-3e2c263b1a1e"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/418CdHQ%2BkLL.jpg" alt="L'art de la Guerre" class="books" /></a>
+      <a href="https://www.amazon.fr/Mauvaise-journ%C3%A9e-demain-Dorothy-Parker/dp/2267020912/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1656614028&sr=8-1"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/41CUVSTVJGL.jpg" alt="Mauvaise journée demain" class="books" /></a>
       <figcaption>
-        Sun Tzu
+        Dorothy Parker
       </figcaption>
       <figcaption>
-        L'art de la guerre
+        Mauvaise journée demain
       </figcaption>
       <figcaption>
-        6,80€
+        7,10€
       </figcaption>
-    </figure>-->
+    </figure>
   </div>
 
   <div class="booksLine">
@@ -178,20 +178,20 @@
       </figcaption>
     </figure>
 
-    <!--Livre 11
+    <!--Livre 11-->
     <figure>
-      <a href="https://www.amazon.fr/LEnigme-chambre-622-Jo%C3%ABl-Dicker/dp/2889730158/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1605407029&sr=1-93" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81sLRAyASzL.jpg"
-          alt="L'Énigme de la Chambre 622" class="books" /></a>
+      <a href="https://www.amazon.fr/Hymnes-%C3%A0-haine-Dorothy-Parker/dp/2752904843/ref=sr_1_4?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=14HWJRFMIKECW&keywords=dorothy+parker&qid=1656613992&sprefix=dorothy+parker%2Caps%2C64&sr=8-4"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/51EG6vYSZsL.jpg" alt="Hymnes à la haine" class="books" /></a>
       <figcaption>
-        Joël Dicker
+        Dorothy Parker
       </figcaption>
       <figcaption>
-        L'Énigme de la Chambre 622
+        Hymnes à la haine
       </figcaption>
       <figcaption>
-        23,00€
+        6,70€
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Livre 12-->
     <figure>
@@ -213,20 +213,20 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 13
+    <!--Livre 13-->
     <figure>
-      <a href="https://www.amazon.fr/Io-Giorgio-Chiellini-dp-8820072637/dp/8820072637/ref=dp_ob_title_bk" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71pbTiRFBDL.jpg" alt="Io, Giorgio"
-          class="books" /></a>
+      <a href="https://www.amazon.fr/VIE-DEUX-DOROTHY-PARKER/dp/226405445X/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=14HWJRFMIKECW&keywords=dorothy+parker&qid=1656613992&sprefix=dorothy+parker%2Caps%2C64&sr=8-1" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/41+xXNwkg8L.jpg" alt="La vie à deux Poche" class="books" /></a>
       <figcaption>
-        Giorgio Chiellini
+        Dorothy Parker
       </figcaption>
       <figcaption>
-        Io, Giorgio
+        La vie à deux Poche
       </figcaption>
       <figcaption>
-        18,90€
+        8,20€
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Livre 14-->
     <figure>
@@ -402,20 +402,23 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 25
+    <!--Livre 25-->
     <figure>
-      <a href="https://www.amazon.fr/Retour-%C3%A0-Birkenau-Ginette-Kolinka/dp/2246820707?ref_=Oct_NReleaseC_301061_6&pf_rd_r=4DW69VZ12YWBZ8SAMD7G&pf_rd_p=e5b0b4bf-eca8-52d1-8616-3e2c263b1a1e&pf_rd_s=merchandised-search-8&pf_rd_t=101&pf_rd_i=301061&pf_rd_m=A1X6FK5RDHNB96"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71Jq5smX3LL.jpg" alt="Retour à Birkenau" class="books" /></a>
+      <a href="https://www.amazon.fr/assassin-au-dessus-tout-soupcon/dp/2290105090/ref=sr_1_1?keywords=un+assassin+au+dessus+de+tout+soup%C3%A7on&qid=1656613959&sprefix=un+assasin+au+%2Caps%2C61&sr=8-1" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/61rXBPMPIdL.jpg" alt="Un assassin au-dessus de tout soupcon" class="books" /></a>
       <figcaption>
-        Ginette Kolinka
+        Yvan Stefanovitch
       </figcaption>
       <figcaption>
-        Retour à Birkenau
+        Un assassin au-dessus
       </figcaption>
       <figcaption>
-        13,00€
+        de tout soupçon
       </figcaption>
-    </figure>-->
+      <figcaption>
+        Rupture de stock
+      </figcaption>
+    </figure>
 
     <!--Livre 26-->
     <figure>
@@ -600,71 +603,65 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 37
+    <!--Livre 37-->
     <figure>
-      <a href="https://www.amazon.fr/Into-wild-Jon-KRAKAUER/dp/2264048301/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1559754680&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61tbitzGOyL.jpg" alt="Into the wild"
-          class="books" /></a>
+      <a href="https://www.amazon.fr/Salutations-r%C3%A9volutionnaires-Sophie-Bonnet/dp/2246815185/ref=sr_1_1?keywords=salutations+revolutionnaires&qid=1656613937&sprefix=salutations+revo%2Caps%2C61&sr=8-1"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71xtK0Pgy+L.jpg" alt="Salutations révolutionnaires" class="books" /></a>
       <figcaption>
-        Jon Krakauer
+        Sophie Bonnet
       </figcaption>
       <figcaption>
-        Into the wild
+        Salutations révolutionnaires
       </figcaption>
       <figcaption>
-        7,60€
+        19,00€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Livre 38
+    <!--Livre 38-->
     <figure>
-      <a href="https://www.amazon.fr/LAmour-vie-Jack-London/dp/2070393739/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=&sr=" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/812eaqFjfmL.jpg" alt="L'Amour de la vie"
-          class="books" /></a>
+      <a href="https://www.amazon.fr/Casse-pipe-Carnet-du-cuirassier-Destouches/dp/207021303X/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1656614488&sr=1-14"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71Hsz2Kh8QL.jpg" alt="Casse-pipe" class="books" /></a>
       <figcaption>
-        Jack London
+        Louis-Ferdinand Céline
       </figcaption>
       <figcaption>
-        L'amour de la Vie
+        Casse-pipe
       </figcaption>
       <figcaption>
-        7,60€
+        17,90€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Livre 39
+    <!--Livre 39-->
     <figure>
-      <a href="https://www.amazon.fr/Barbier-S%C3%A9ville-BEAUMARCHAIS/dp/2266289187/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=2R6F3GC6O89FA&keywords=Le+Barbier+de+S%C3%A9ville+poche&qid=1650641740&sprefix=le+barbier+de+s%C3%A9ville+poche%2Caps%2C56&sr=8-1"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61PdJJXdZiL.jpg" alt="Le Barbier de Séville" class="books" /></a>
+      <a href="https://www.amazon.fr/Mort-%C3%A0-cr%C3%A9dit-Louis-Ferdinand-C%C3%A9line/dp/2070376923/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=2J35TCBO0C5BO&keywords=mort+%C3%A0+credit&qid=1656614339&s=books&sprefix=mort+%C3%A0+credit%2Cstripbooks%2C63&sr=1-1" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/81xAA8UO0kL.jpg" alt="Mort à crédit" class="books" /></a>
       <figcaption>
-        Beaumarchais
+        Louis-Ferdinand Céline
       </figcaption>
       <figcaption>
-        Le Barbier de Séville
+        Mort à crédit
       </figcaption>
       <figcaption>
-        Livre 1 de 2
+        10,90€
       </figcaption>
-      <figcaption>
-        1,90€
-      </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Livre 40
+    <!--Livre 40-->
     <figure>
-      <a href="https://www.amazon.fr/Mariage-Figaro-M%C3%A8re-coupable/dp/2070375277/ref=sr_1_4?crid=2YFDE5RFPG8I3&keywords=la+m%C3%A8re+coupable+beaumarchais&qid=1650641789&sprefix=La+M%C3%A8re+coupable+%2Caps%2C57&sr=8-4" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/91VXdV12sPL.jpg" alt="Le Mariage de Figaro - La Mère coupable" class="books" /></a>
+      <a href="https://www.amazon.fr/Grondement-montagne-Yasunari-Kawabata/dp/2253938920/ref=sr_1_1?keywords=le+grondement+de+la+montagne+kawabata&qid=1656613871&sprefix=le+grondement+d%2Caps%2C67&sr=8-1" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/81pzI8MUl8L.jpg" alt="Le Grondement de la montagne" class="books" /></a>
       <figcaption>
-        Beaumarchais
+        Yasunari Kawabata
       </figcaption>
       <figcaption>
-        Le Mariage de Figaro
+        Le Grondement de la montagne
       </figcaption>
       <figcaption>
-        Livre 2 de 2
+        8,20€
       </figcaption>
-      <figcaption>
-        11,00€
-      </figcaption>
-    </figure>-->
+    </figure>
   </div>
 
   <div class="booksLine">
@@ -5108,7 +5105,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 99-->
+    <!--Livre 99
     <figure>
       <a href="https://www.amazon.fr/Grondement-montagne-Yasunari-Kawabata/dp/2253938920/ref=sr_1_1?keywords=le+grondement+de+la+montagne+kawabata&qid=1656613871&sprefix=le+grondement+d%2Caps%2C67&sr=8-1" target="_blank"> <img
           src="https://images-na.ssl-images-amazon.com/images/I/81pzI8MUl8L.jpg" alt="Le Grondement de la montagne" class="books" /></a>
@@ -5121,9 +5118,9 @@
       <figcaption>
         8,20€
       </figcaption>
-    </figure>
+    </figure>-->
 
-    <!--Livre 100-->
+    <!--Livre 100
     <figure>
       <a href="https://www.amazon.fr/Mort-%C3%A0-cr%C3%A9dit-Louis-Ferdinand-C%C3%A9line/dp/2070376923/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=2J35TCBO0C5BO&keywords=mort+%C3%A0+credit&qid=1656614339&s=books&sprefix=mort+%C3%A0+credit%2Cstripbooks%2C63&sr=1-1" target="_blank"> <img
           src="https://images-na.ssl-images-amazon.com/images/I/81xAA8UO0kL.jpg" alt="Mort à crédit" class="books" /></a>
@@ -5136,11 +5133,11 @@
       <figcaption>
         10,90€
       </figcaption>
-    </figure>
+    </figure>-->
   </div>
 
   <div class="booksLine">
-    <!--Livre 97-->
+    <!--Livre 97
     <figure>
       <a href="https://www.amazon.fr/Casse-pipe-Carnet-du-cuirassier-Destouches/dp/207021303X/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1656614488&sr=1-14"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71Hsz2Kh8QL.jpg" alt="Casse-pipe" class="books" /></a>
@@ -5153,9 +5150,9 @@
       <figcaption>
         17,90€
       </figcaption>
-    </figure>
+    </figure>-->
 
-    <!--Livre 98-->
+    <!--Livre 98
     <figure>
       <a href="https://www.amazon.fr/Salutations-r%C3%A9volutionnaires-Sophie-Bonnet/dp/2246815185/ref=sr_1_1?keywords=salutations+revolutionnaires&qid=1656613937&sprefix=salutations+revo%2Caps%2C61&sr=8-1"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71xtK0Pgy+L.jpg" alt="Salutations révolutionnaires" class="books" /></a>
@@ -5168,9 +5165,9 @@
       <figcaption>
         19,00€
       </figcaption>
-    </figure>
+    </figure>-->
 
-    <!--Livre 99-->
+    <!--Livre 99
     <figure>
       <a href="https://www.amazon.fr/assassin-au-dessus-tout-soupcon/dp/2290105090/ref=sr_1_1?keywords=un+assassin+au+dessus+de+tout+soup%C3%A7on&qid=1656613959&sprefix=un+assasin+au+%2Caps%2C61&sr=8-1" target="_blank"> <img
           src="https://images-na.ssl-images-amazon.com/images/I/61rXBPMPIdL.jpg" alt="Un assassin au-dessus de tout soupcon" class="books" /></a>
@@ -5186,9 +5183,9 @@
       <figcaption>
         Rupture de stock
       </figcaption>
-    </figure>
+    </figure>-->
 
-    <!--Livre 100-->
+    <!--Livre 100
     <figure>
       <a href="https://www.amazon.fr/VIE-DEUX-DOROTHY-PARKER/dp/226405445X/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=14HWJRFMIKECW&keywords=dorothy+parker&qid=1656613992&sprefix=dorothy+parker%2Caps%2C64&sr=8-1" target="_blank"> <img
           src="https://images-na.ssl-images-amazon.com/images/I/41+xXNwkg8L.jpg" alt="La vie à deux Poche" class="books" /></a>
@@ -5205,7 +5202,7 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 97-->
+    <!--Livre 97
     <figure>
       <a href="https://www.amazon.fr/Hymnes-%C3%A0-haine-Dorothy-Parker/dp/2752904843/ref=sr_1_4?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=14HWJRFMIKECW&keywords=dorothy+parker&qid=1656613992&sprefix=dorothy+parker%2Caps%2C64&sr=8-4"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/51EG6vYSZsL.jpg" alt="Hymnes à la haine" class="books" /></a>
@@ -5218,9 +5215,9 @@
       <figcaption>
         6,70€
       </figcaption>
-    </figure>
+    </figure>-->
 
-    <!--Livre 98-->
+    <!--Livre 98
     <figure>
       <a href="https://www.amazon.fr/Mauvaise-journ%C3%A9e-demain-Dorothy-Parker/dp/2267020912/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1656614028&sr=8-1"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/41CUVSTVJGL.jpg" alt="Mauvaise journée demain" class="books" /></a>
@@ -5233,9 +5230,9 @@
       <figcaption>
         7,10€
       </figcaption>
-    </figure>
+    </figure>-->
 
-    <!--Livre 99-->
+    <!--Livre 99
     <figure>
       <a href="https://www.amazon.fr/Comme-une-valse-Dorothy-PARKER/dp/2264017104/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=MO3CWG3CXEVZ&keywords=dorothy+parker+comme+une+valse&qid=1656614078&sprefix=dorothy+parker+comme+une+valse%2Caps%2C53&sr=8-1" target="_blank"> <img
           src="https://images-na.ssl-images-amazon.com/images/I/61tP1Dq6TnL.jpg" alt="Comme une valse" class="books" /></a>
@@ -5248,7 +5245,7 @@
       <figcaption>
         7,10€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 100
     <figure>
