--- a/autres.html
+++ b/autres.html
@@ -80,7 +80,7 @@
   </div>
 
   <div class="othersLine">
-    <!--Autres 5-->
+    <!--Autres 5
     <figure>
       <a href="https://shop.gotaga.tv/accessoires/57-mug-gotaga.html"
         target="_blank"> <img src="https://shop.gotaga.tv/751-large_default/mug-gotaga.jpg" alt="Mug Gotaga" class="others" /></a>
@@ -90,7 +90,7 @@
       <figcaption>
         20,00€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Autres 6-->
     <figure>
