--- a/livres.html
+++ b/livres.html
@@ -275,20 +275,20 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 17
+    <!--Livre 17-->
     <figure>
-      <a href="https://www.amazon.fr/Verdun-Yann-Moix/dp/2246823463/ref=sr_1_1?keywords=yann+moix+verdun&qid=1649593543&sprefix=yann+moi%2Caps%2C63&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/51roe24qM+L.jpg"
-          alt="Verdun" class="books" /></a>
+      <a href="https://www.amazon.fr/Xavier-Dupont-Ligonn%C3%A8s-grande-enqu%C3%AAte/dp/2501158601/ref=msx_wsirn_v1_sccl_1_1/257-9479405-0879257?pd_rd_w=hSALJ&content-id=amzn1.sym.17c4bd6e-a19d-4594-b7eb-49adc7297939&pf_rd_p=17c4bd6e-a19d-4594-b7eb-49adc7297939&pf_rd_r=6FF0WRGYQFRFQ2ZHFXJH&pd_rd_wg=ebRek&pd_rd_r=5773470b-d92a-40f0-b915-4467e0417b37&pd_rd_i=2501158601&psc=1"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/810yp2et6WL.jpg" alt="Xavier Dupont de Ligonnès - La grande enquête" class="books" /></a>
       <figcaption>
-        Yann Moix
+        Pierre Boisson
       </figcaption>
       <figcaption>
-        Verdun
+        La grande enquête
       </figcaption>
       <figcaption>
-        19,50€
+        15,90€
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Livre 18-->
     <figure>
@@ -5090,7 +5090,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 98-->
+    <!--Livre 98
     <figure>
       <a href="https://www.amazon.fr/Xavier-Dupont-Ligonn%C3%A8s-grande-enqu%C3%AAte/dp/2501158601/ref=msx_wsirn_v1_sccl_1_1/257-9479405-0879257?pd_rd_w=hSALJ&content-id=amzn1.sym.17c4bd6e-a19d-4594-b7eb-49adc7297939&pf_rd_p=17c4bd6e-a19d-4594-b7eb-49adc7297939&pf_rd_r=6FF0WRGYQFRFQ2ZHFXJH&pd_rd_wg=ebRek&pd_rd_r=5773470b-d92a-40f0-b915-4467e0417b37&pd_rd_i=2501158601&psc=1"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/810yp2et6WL.jpg" alt="Xavier Dupont de Ligonnès - La grande enquête" class="books" /></a>
@@ -5103,7 +5103,7 @@
       <figcaption>
         15,90€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 99
     <figure>
