maj derneirs cadeaux

--- a/livres.html
+++ b/livres.html
@@ -989,19 +989,16 @@
   <div class="booksLine">
     <!--Livre 61-->
     <figure>
-      <a href="https://www.amazon.fr/%C3%A9tait-une-fois-%C3%A0-Hollywood/dp/2213721017/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=tarantino&qid=1628544363&rnid=1703605031&s=books&sr=1-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/61QYMtKlHsS.jpg" alt="Il était une fois à Hollywood" class="books" /></a>
+      <a href="https://www.amazon.fr/Oublier-Palerme-Charles-Roux/dp/2253009245/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1658519282&sr=1-1" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/81aRHSmSpcL.jpg" alt="Oublier Palerme" class="books" /></a>
       <figcaption>
-        Quentin Tarantino
+        Edmonde Charles-Roux
       </figcaption>
       <figcaption>
-        Il était une fois
+        Oublier Palerme
       </figcaption>
       <figcaption>
-        à Hollywood
-      </figcaption>
-      <figcaption>
-        23,00€
+        8,20€
       </figcaption>
     </figure>
 
@@ -2252,19 +2249,16 @@
 
     <!--Livre 114-->
     <figure>
-      <a href="https://www.amazon.fr/Mettez-livre-dans-mon-cercueil/dp/2130628583/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=J3IDZDGIJNWA&keywords=michel+polac&qid=1650378783&sprefix=michel+polac%2Caps%2C72&sr=8-1" target="_blank">
-        <img src="https://images-na.ssl-images-amazon.com/images/I/613aht5xXEL.jpg" alt="Mettez un livre dans mon cercueil" class="books" /></a>
+      <a href="https://www.amazon.fr/Etincelles-lenclume-Gabriele-DAnnunzio/dp/2919205323/ref=sr_1_8?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=7HATWCXHW4QR&keywords=gabriele+d%27annunzio+l%27enfant&qid=1656501050&sprefix=gabriele+d%27annunzio+l%27enfant%2Caps%2C51&sr=8-8"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71hzEosTqRL.jpg" alt="Les Etincelles de l'enclume" class="books" /></a>
       <figcaption>
-        Michel Polac
+        Gabriele D'Annunzio
       </figcaption>
       <figcaption>
-        Mettez un livre
+        Les Etincelles de l'enclume
       </figcaption>
       <figcaption>
-        dans mon cercueil
-      </figcaption>
-      <figcaption>
-        19,50€
+        16,00€
       </figcaption>
     </figure>
 
@@ -5072,7 +5066,7 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 97-->
+    <!--Livre 97
     <figure>
       <a href="https://www.amazon.fr/Etincelles-lenclume-Gabriele-DAnnunzio/dp/2919205323/ref=sr_1_8?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=7HATWCXHW4QR&keywords=gabriele+d%27annunzio+l%27enfant&qid=1656501050&sprefix=gabriele+d%27annunzio+l%27enfant%2Caps%2C51&sr=8-8"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71hzEosTqRL.jpg" alt="Les Etincelles de l'enclume" class="books" /></a>
@@ -5085,7 +5079,7 @@
       <figcaption>
         16,00€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 98
     <figure>
