--- a/jeuxvideo.html
+++ b/jeuxvideo.html
@@ -22,22 +22,19 @@
 
   <div class="gamesLine">
 
-    <!--Jeu 1
+    <!--Jeu 1-->
     <figure>
-      <a href="#" target="_blank"> <img src="https://www.motorsinside.com/images/photo/article/f12022/frontier-f1-manager-2022-annonce-teaser.jpg" alt="F1 Manager 2022" class="game" /></a>
+      <a href="#" target="_blank"> <img src="https://image.api.playstation.com/vulcan/ap/rnd/202207/0515/HrC1Prgq2P70WXZn1X36P9vu.png" alt="Fifa 23" class="game" /></a>
       <figcaption>
-        F1 Manager 2022
+        Fifa 23
       </figcaption>
       <figcaption>
-        50€
+        80€ en précommande
       </figcaption>
       <figcaption>
-        Sortie fin aout
+        A précommander sur PS5
       </figcaption>
-      <figcaption>
-        A précommander sur PC
-      </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Jeu 2
     <figure>
