--- a/livres.html
+++ b/livres.html
@@ -5066,177 +5066,174 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 97
+    <!--Livre 97-->
     <figure>
-      <a href="https://www.amazon.fr/Etincelles-lenclume-Gabriele-DAnnunzio/dp/2919205323/ref=sr_1_8?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=7HATWCXHW4QR&keywords=gabriele+d%27annunzio+l%27enfant&qid=1656501050&sprefix=gabriele+d%27annunzio+l%27enfant%2Caps%2C51&sr=8-8"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71hzEosTqRL.jpg" alt="Les Etincelles de l'enclume" class="books" /></a>
+      <a href="https://www.amazon.fr/choses-humaines-Karine-Tuil/dp/2072921112/ref=sr_1_1?keywords=la+chose+humaine&qid=1661859700&sprefix=la+chose+hu%2Caps%2C94&sr=8-1"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/W/WEBP_402378-T1/images/I/71v0ypQoDLL.jpg" alt="Les choses humaines" class="books" /></a>
       <figcaption>
-        Gabriele D'Annunzio
+        Karine Tuil
       </figcaption>
       <figcaption>
-        Les Etincelles de l'enclume
+        Les choses humaines
       </figcaption>
       <figcaption>
-        16,00€
+        8,40€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Livre 98
+    <!--Livre 98-->
     <figure>
-      <a href="https://www.amazon.fr/Xavier-Dupont-Ligonn%C3%A8s-grande-enqu%C3%AAte/dp/2501158601/ref=msx_wsirn_v1_sccl_1_1/257-9479405-0879257?pd_rd_w=hSALJ&content-id=amzn1.sym.17c4bd6e-a19d-4594-b7eb-49adc7297939&pf_rd_p=17c4bd6e-a19d-4594-b7eb-49adc7297939&pf_rd_r=6FF0WRGYQFRFQ2ZHFXJH&pd_rd_wg=ebRek&pd_rd_r=5773470b-d92a-40f0-b915-4467e0417b37&pd_rd_i=2501158601&psc=1"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/810yp2et6WL.jpg" alt="Xavier Dupont de Ligonnès - La grande enquête" class="books" /></a>
+      <a href="https://www.amazon.fr/d%C3%A9cision-Karine-Tuil/dp/207294354X/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=2BF0WIQSAV8XK&keywords=la+decision&qid=1661859705&sprefix=la+decision%2Caps%2C82&sr=8-1"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/W/WEBP_402378-T1/images/I/71dYW2+Y7vL.jpg" alt="La décision" class="books" /></a>
       <figcaption>
-        Pierre Boisson
+        Karine Tuil
       </figcaption>
       <figcaption>
-        La grande enquête
+        La décision
       </figcaption>
       <figcaption>
-        15,90€
+        20,00€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Livre 99
+    <!--Livre 99-->
     <figure>
-      <a href="https://www.amazon.fr/Grondement-montagne-Yasunari-Kawabata/dp/2253938920/ref=sr_1_1?keywords=le+grondement+de+la+montagne+kawabata&qid=1656613871&sprefix=le+grondement+d%2Caps%2C67&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/81pzI8MUl8L.jpg" alt="Le Grondement de la montagne" class="books" /></a>
+      <a href="https://www.amazon.fr/Splendeur-lInfamie-Erik-LARSON/dp/2749157382/ref=sr_1_1?keywords=la+splendeur+et+l%27infamie&qid=1661859826&sprefix=la+splen%2Caps%2C89&sr=8-1" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/W/WEBP_402378-T1/images/I/517ISYfZZ3S.jpg" alt="La Splendeur et l'Infamie" class="books" /></a>
       <figcaption>
-        Yasunari Kawabata
+        Erik Larson
       </figcaption>
       <figcaption>
-        Le Grondement de la montagne
+        La Splendeur et l'Infamie
       </figcaption>
       <figcaption>
-        8,20€
+        24,90€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Livre 100
+    <!--Livre 100-->
     <figure>
-      <a href="https://www.amazon.fr/Mort-%C3%A0-cr%C3%A9dit-Louis-Ferdinand-C%C3%A9line/dp/2070376923/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=2J35TCBO0C5BO&keywords=mort+%C3%A0+credit&qid=1656614339&s=books&sprefix=mort+%C3%A0+credit%2Cstripbooks%2C63&sr=1-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/81xAA8UO0kL.jpg" alt="Mort à crédit" class="books" /></a>
+      <a href="https://www.amazon.fr/Trahisons-DGSE-secrets-famille-l%C3%A9gendes/dp/2234091411/ref=sr_1_1?crid=2J7UOV5NGIDX3&keywords=trahison+a+la+dgse&qid=1661859842&sprefix=trahison+a%2Caps%2C79&sr=8-1" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/W/WEBP_402378-T1/images/I/81WRtVV9inL.jpg" alt="Trahisons à la DGSE" class="books" /></a>
       <figcaption>
-        Louis-Ferdinand Céline
+        Antoine Izambard
       </figcaption>
       <figcaption>
-        Mort à crédit
+        Trahisons à la DGSE
       </figcaption>
       <figcaption>
-        10,90€
+        20,00€
       </figcaption>
-    </figure>-->
+    </figure>
   </div>
 
   <div class="booksLine">
-    <!--Livre 97
+    <!--Livre 97-->
     <figure>
-      <a href="https://www.amazon.fr/Casse-pipe-Carnet-du-cuirassier-Destouches/dp/207021303X/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1656614488&sr=1-14"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71Hsz2Kh8QL.jpg" alt="Casse-pipe" class="books" /></a>
+      <a href="https://www.amazon.fr/Gang-Stories-Franck-Haderer/dp/2017101400/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=VUOXTUQN35DF&keywords=gang+stories&qid=1661859858&sprefix=gang+stories%2Caps%2C76&sr=8-1"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/W/WEBP_402378-T1/images/I/71eVLutgknL.jpg" alt="Gang Stories" class="books" /></a>
       <figcaption>
-        Louis-Ferdinand Céline
+        Franck Haderer
       </figcaption>
       <figcaption>
-        Casse-pipe
+        Gang Stories
       </figcaption>
       <figcaption>
-        17,90€
+        24,95€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Livre 98
+    <!--Livre 98-->
     <figure>
-      <a href="https://www.amazon.fr/Salutations-r%C3%A9volutionnaires-Sophie-Bonnet/dp/2246815185/ref=sr_1_1?keywords=salutations+revolutionnaires&qid=1656613937&sprefix=salutations+revo%2Caps%2C61&sr=8-1"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71xtK0Pgy+L.jpg" alt="Salutations révolutionnaires" class="books" /></a>
+      <a href="https://www.amazon.fr/Enfant-salaud-Sorj-Chalandon/dp/2246828155/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=3QPZZ9LRT29GV&keywords=enfant+de+salaud&qid=1661859871&sprefix=enfant+de+salaud%2Caps%2C82&sr=8-1"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/W/WEBP_402378-T1/images/I/61wP7CfELTS.jpg" alt="Enfant de salaud" class="books" /></a>
       <figcaption>
-        Sophie Bonnet
+        Sorj Chalandon
       </figcaption>
       <figcaption>
-        Salutations révolutionnaires
+        Enfant de salaud
+      </figcaption>
+      <figcaption>
+        20,90€
+      </figcaption>
+    </figure>
+
+    <!--Livre 99-->
+    <figure>
+      <a href="https://www.amazon.fr/American-Predator-Maureen-Callahan/dp/2355848378/ref=sr_1_1?keywords=american+predator&qid=1661859954&sprefix=american+pre%2Caps%2C82&sr=8-1" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/W/WEBP_402378-T1/images/I/71KGbsx9ZPL.jpg" alt="American Predator" class="books" /></a>
+      <figcaption>
+        Maureen Callahan
+      </figcaption>
+      <figcaption>
+        American Predator
+      </figcaption>
+      <figcaption>
+        21,00€
+      </figcaption>
+    </figure>
+
+    <!--Livre 100-->
+    <figure>
+      <a href="https://www.amazon.fr/LAffaire-Rambla-ou-Fant%C3%B4me-Ranucci/dp/2258196418/ref=sr_1_1?keywords=l%27affaire+rambla+ou+le+fant%C3%B4me+de+ranucci&qid=1661859968&sprefix=l%27affaire+r%2Caps%2C78&sr=8-1" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/W/WEBP_402378-T1/images/I/71872+IGUHL.jpg" alt="L'Affaire Rambla" class="books" /></a>
+      <figcaption>
+        Agnès Grossmann
+      </figcaption>
+      <figcaption>
+        L'Affaire Rambla
       </figcaption>
       <figcaption>
         19,00€
       </figcaption>
-    </figure>-->
-
-    <!--Livre 99
-    <figure>
-      <a href="https://www.amazon.fr/assassin-au-dessus-tout-soupcon/dp/2290105090/ref=sr_1_1?keywords=un+assassin+au+dessus+de+tout+soup%C3%A7on&qid=1656613959&sprefix=un+assasin+au+%2Caps%2C61&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/61rXBPMPIdL.jpg" alt="Un assassin au-dessus de tout soupcon" class="books" /></a>
-      <figcaption>
-        Yvan Stefanovitch
-      </figcaption>
-      <figcaption>
-        Un assassin au-dessus
-      </figcaption>
-      <figcaption>
-        de tout soupçon
-      </figcaption>
-      <figcaption>
-        Rupture de stock
-      </figcaption>
-    </figure>-->
-
-    <!--Livre 100
-    <figure>
-      <a href="https://www.amazon.fr/VIE-DEUX-DOROTHY-PARKER/dp/226405445X/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=14HWJRFMIKECW&keywords=dorothy+parker&qid=1656613992&sprefix=dorothy+parker%2Caps%2C64&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/41+xXNwkg8L.jpg" alt="La vie à deux Poche" class="books" /></a>
-      <figcaption>
-        Dorothy Parker
-      </figcaption>
-      <figcaption>
-        La vie à deux Poche
-      </figcaption>
-      <figcaption>
-        8,20€
-      </figcaption>
-    </figure>-->
+    </figure>
   </div>
 
   <div class="booksLine">
-    <!--Livre 97
+    <!--Livre 97-->
     <figure>
-      <a href="https://www.amazon.fr/Hymnes-%C3%A0-haine-Dorothy-Parker/dp/2752904843/ref=sr_1_4?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=14HWJRFMIKECW&keywords=dorothy+parker&qid=1656613992&sprefix=dorothy+parker%2Caps%2C64&sr=8-4"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/51EG6vYSZsL.jpg" alt="Hymnes à la haine" class="books" /></a>
+      <a href="https://www.amazon.fr/JEANNE-DARC-Claude-Gauvard/dp/2070178552/ref=sr_1_1?crid=33W6SY3RDB8G3&keywords=jeanne+d%27arc+heroine&qid=1661860001&sprefix=jeanne+d%27arc+her%2Caps%2C61&sr=8-1"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/W/WEBP_402378-T1/images/I/61lqWGHgMTL.jpg" alt="JEANNE D'ARC" class="books" /></a>
       <figcaption>
-        Dorothy Parker
+        Claude Gauvard
       </figcaption>
       <figcaption>
-        Hymnes à la haine
+        JEANNE D'ARC
       </figcaption>
       <figcaption>
-        6,70€
+        18,00€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Livre 98
+    <!--Livre 98-->
     <figure>
-      <a href="https://www.amazon.fr/Mauvaise-journ%C3%A9e-demain-Dorothy-Parker/dp/2267020912/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1656614028&sr=8-1"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/41CUVSTVJGL.jpg" alt="Mauvaise journée demain" class="books" /></a>
+      <a href="https://www.amazon.fr/paquebot-Pierre-Assouline/dp/2072895294/ref=sr_1_1?keywords=le+paquebot+pierre+assouline&qid=1661860017&sprefix=le+paquebo%2Caps%2C75&sr=8-1"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/W/WEBP_402378-T1/images/I/81DdpDj2r-L.jpg" alt="Le paquebot" class="books" /></a>
       <figcaption>
-        Dorothy Parker
+        Pierre Assouline
       </figcaption>
       <figcaption>
-        Mauvaise journée demain
+        Le paquebot
       </figcaption>
       <figcaption>
-        7,10€
+        21,00€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Livre 99
+    <!--Livre 99-->
     <figure>
-      <a href="https://www.amazon.fr/Comme-une-valse-Dorothy-PARKER/dp/2264017104/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=MO3CWG3CXEVZ&keywords=dorothy+parker+comme+une+valse&qid=1656614078&sprefix=dorothy+parker+comme+une+valse%2Caps%2C53&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/61tP1Dq6TnL.jpg" alt="Comme une valse" class="books" /></a>
+      <a href="https://www.amazon.fr/fille-Deauville-Vanessa-Schneider/dp/2246817234/ref=sr_1_1?keywords=la+fille+de+deauville&qid=1661860032&sprefix=la+fille+de+d%2Caps%2C79&sr=8-1" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/W/WEBP_402378-T1/images/I/617QBGo3MWL.jpg" alt="La fille de Deauville" class="books" /></a>
       <figcaption>
-        Dorothy Parker
+        Vanessa Schneider
       </figcaption>
       <figcaption>
-        Comme une valse
+        La fille de Deauville
       </figcaption>
       <figcaption>
-        7,10€
+        20,00€
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Livre 100
     <figure>
