--- a/autres.html
+++ b/autres.html
@@ -21,7 +21,7 @@
   </navbar>
 
   <div class="othersLine">
-    <!--Autres 1-->
+    <!--Autres 1
     <figure>
       <a href="https://www.amazon.fr/Alimentation-Multiprise-r%C3%A9partiteur-interrupteurs-individuels/dp/B08KXY2B5T/ref=sr_1_21?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1ZQZGW3ZUUFYT&keywords=multi+usb&qid=1660929494&sprefix=multi+usb%2Caps%2C73&sr=8-21" target="_blank"> <img
           src="https://m.media-amazon.com/images/I/71V7cnynmLL._AC_SL1500_.jpg" alt="Port Multi USB" class="others" /></a>
@@ -31,7 +31,7 @@
       <figcaption>
         37,46€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Autres 2
     <figure>
