--- a/jeuxvideo.html
+++ b/jeuxvideo.html
@@ -22,7 +22,7 @@
 
   <div class="gamesLine">
 
-    <!--Jeu 1-->
+    <!--Jeu 1
     <figure>
       <a href="#" target="_blank"> <img src="https://image.api.playstation.com/vulcan/ap/rnd/202207/0515/HrC1Prgq2P70WXZn1X36P9vu.png" alt="Fifa 23" class="game" /></a>
       <figcaption>
@@ -34,7 +34,7 @@
       <figcaption>
         A précommander sur PS5
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Jeu 2
     <figure>
