--- a/livres.html
+++ b/livres.html
@@ -5252,50 +5252,53 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 97
+    <!--Livre 97-->
     <figure>
-      <a href="https://www.amazon.fr/Derri%C3%A8re-porte-verte-Bernard-LIONS/dp/226317463X/ref=msx_wsirn_v1_3?pd_rd_w=KBmBG&pf_rd_p=0a0d9834-bf34-40cf-870c-8760e04a32b7&pf_rd_r=TJ8W0C94D8VJAWGRRDJG&pd_rd_r=2ed4b53a-8dcb-44b2-ae20-3379c41da5fa&pd_rd_wg=1AeVK&pd_rd_i=226317463X&psc=1"
-        target="_blank"> <img src="https://www.amazon.fr/images/I/41by02c4o7L.jpg" alt="Derrière la porte verte" class="books" /></a>
+      <a href="https://www.amazon.fr/Cr%C3%A9dit-illimit%C3%A9-Nicolas-Rey/dp/B09WZWRWZR/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1664123854&sr=8-1"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/31CXu3dfKvL.jpg" alt="Crédit illimité" class="books" /></a>
       <figcaption>
-        Bernard Lions
+        Nicolas Rey
       </figcaption>
       <figcaption>
-        Derrière la porte verte
+        Crédit illimité
       </figcaption>
       <figcaption>
-        17,90€
+        18,00€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Livre 98
+    <!--Livre 98-->
     <figure>
-      <a href="https://www.amazon.fr/vie-continue-Bernard-Pivot/dp/2226451323/ref=msx_wsirn_v1_2?pd_rd_w=KBmBG&pf_rd_p=0a0d9834-bf34-40cf-870c-8760e04a32b7&pf_rd_r=TJ8W0C94D8VJAWGRRDJG&pd_rd_r=2ed4b53a-8dcb-44b2-ae20-3379c41da5fa&pd_rd_wg=1AeVK&pd_rd_i=2226451323&psc=1"
-        target="_blank"> <img src="https://www.amazon.fr/images/I/71RcLpRTVaL.jpg" alt="... Mais la vie continue" class="books" /></a>
+      <a href="https://www.amazon.fr/V13-Chronique-judiciaire-Emmanuel-Carr%C3%A8re/dp/2818056063/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1664226672&sr=1-1"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61DeFRXP8fL.jpg" alt="V13: Chronique judiciaire" class="books" /></a>
       <figcaption>
-        Bernard Pivot
+        Emmanuel Carrère
       </figcaption>
       <figcaption>
-        ... Mais la vie continue
+        V13: Chronique judiciaire
       </figcaption>
       <figcaption>
-        19,90€
+        22,00€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Livre 99
+    <!--Livre 99-->
     <figure>
-      <a href="https://www.amazon.fr/Messy-Kitchen-Deliciously-Fabulously-Copiously/dp/1682619389/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=renee+paquette&qid=1623591705&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/81d-hgRC2eL.jpg" alt="Renee Paquette cuisine" class="books" /></a>
+      <a href="https://www.amazon.fr/Londres-Louis-Ferdinand-C%C3%A9line/dp/2072983371/ref=d_msx_wsirn_v1_sccl_2_23/262-3250571-8146649?pd_rd_w=bP8hb&content-id=amzn1.sym.a1965795-09f3-4ed4-b0c1-5fdecd0f37af&pf_rd_p=a1965795-09f3-4ed4-b0c1-5fdecd0f37af&pf_rd_r=EZJ0YPQ8XMHVM062V1G0&pd_rd_wg=huM7d&pd_rd_r=45081859-7a0a-4529-9cd1-94fd831b325b&pd_rd_i=2072983371&psc=1" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/31BqudqWmGL.jpg" alt="Londres" class="books" /></a>
       <figcaption>
-        Renee Paquette
+        Louis-Ferdinand Céline
       </figcaption>
       <figcaption>
-        Messy In The Kitchen
+        Londres
       </figcaption>
       <figcaption>
-        23,56€
+        24,00€
       </figcaption>
-    </figure>-->
+      <figcaption>
+        Sortie le 13 octobre
+      </figcaption>
+    </figure>
 
     <!--Livre 100
     <figure>
